Update Chapter 11 Notes

--- a/Chapter11_Notes.ipynb
+++ b/Chapter11_Notes.ipynb
@@ -67,7 +67,7 @@
     "- Because this new problem resembles the original problem, the function calls a fresh copy of itself to work on the smaller problem - this is referred to as a recursive call/recursion step\n",
     "- This concept of separating the problem into smaller portions is a form of the divide-and-conquer appraoch\n",
     "- The recursion step executes while the original function call is still active\n",
-    "- For the recursion to eventually termine, it must converge on a case case\n",
+    "- For the recursion to eventually terminate, it must converge on a base case\n",
     "- When the function recognizes the base case, it returns a result to the previous copy of the function\n",
     "- A sequence of returns ensues until the original function call returns the final result to the caller"
    ]
@@ -362,7 +362,7 @@
     "- O(n^2) is referred to as quadratic run time\n",
     "- Pronounced \"on the order of n-squared\" or \"order n-squared\"\n",
     "- As n grows, you will start to notice performance degradation\n",
-    "- O(n^2) algorithms are easy to wright, more efficient algorithms often take a bit more cleverness and work to create\n",
+    "- O(n^2) algorithms are easy to write, more efficient algorithms often take a bit more cleverness and work to create\n",
     "\n",
     "**Big O of the Linear Search**\n",
     "- The linear search algorithm runs in O(n) time\n",
@@ -460,7 +460,40 @@
    "metadata": {},
    "source": [
     "### Big O of the Insertion Sort\n",
-    "- The insertion sort algorithm runsin O(n^2) time"
+    "- The insertion sort algorithm runsin O(n^2) time\n",
+    "- Like selection sort, the implementation of insertion sort contains two loops\n",
+    "- The for loop iterates len(data) -1 times, inserting an element into the appropriate position among the elements\n",
+    "- The while loop iterates over the preceding elements in the array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61ccf250-7d09-42c2-a465-e0767f5327be",
+   "metadata": {},
+   "source": [
+    "### 11.13 Merge Sort\n",
+    "- Merge sort is an efficient sorting algorithm but is conceptually more complex than selection sort and insertion sort\n",
+    "- The merge sort algorithm sorts an array by splitting it into two equal-sized subarrays, sorting each subarray, then merging them into one larger array\n",
+    "- Merge sort is recursive\n",
+    "- The base case is an array with one element, which is sorted, so the merge sort immediately returns this case"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9c58033-6f8a-4fe0-a9a8-036563843b39",
+   "metadata": {},
+   "source": [
+    "### 11.13.2 Big O of the Merge Sort\n",
+    "- Merge sort is far more efficient than insertion or selection sort\n",
+    "- It results in a total efficiency of O(n log n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "517d50e5-0a6e-4d4d-8ea7-f3242f301d8c",
+   "metadata": {},
+   "source": [
+    "### 11.15 Visualizing Algorithms"
    ]
   }
  ],
